# spark

./: .fossa.yml  .gitignore  .mise.toml  Dockerfile  Makefile  README.md  bitcoin_regtest.conf  cleanup.sh  copy.bara.sky  lrcd.template.config.toml  package-lock.json  run-everything.sh  run-wallet.sh  so.template.config.yaml  so_config.yaml
.github/workflows/: db.yml  dummy.yaml  go.yml  issuer-js-sdk.yml  js-sdk.yml  licenses.yaml  python-signer.yml  release.yaml  run-spark-hermetic-test.yaml  rust-sdk.yaml  socket.yaml  spark-hermetic-test.yaml  spark-hermetic-tests.yaml  swift-signer.yml
apps/Spark/: .swift-format
minikube/: README.md  ca.yaml  qemu.rb  setup.sh
protos/: common.proto  dkg.proto  frost.proto  lrc20.proto  mock.proto  spark.proto  spark_authn.proto  spark_authn_internal.proto  spark_internal.proto  spark_tree.proto
protos/validate/: validate.proto
scripts/: build-deploy-dev.sh  build-to-minikube.sh  build.sh  collect-container-logs.sh  ecr-secret.sh  export-minikube-ca.sh  lightspark-helm.sh  local-test.sh  minikube-deploy-basic-services.sh  minikube-deploy-spark-services.sh  port-forwarding.sh  rds.sh  run-local-signer-container.sh
sdks/issuer-js-sdk/: README.md  bun.lockb  index.ts  jest.config.js  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  rebuild.sh  tsconfig.json
sdks/js/: .gitignore  package.json  turbo.json
sdks/lrc20-js-sdk/: package.json
sdks/spark-js-sdk/: .gitignore  copy.bara.sky  jest.config.ts  package.json  tsconfig.json
signer/: Cargo.toml  README.md
signer/spark-frost/: Cargo.toml  build.rs
signer/spark-frost-signer/src/: dkg.rs  main.rs  server.rs
signer/spark-frost-uniffi/: Cargo.toml  build-bindings.sh
signer/spark-frost-uniffi/spark-bindings/: spark_bindings_bg.wasm  spark_bindings_bg.wasm.d.ts
signer/spark-frost-uniffi/spark-frost-python/: setup.py
signer/spark-frost-uniffi/src/: lib.rs  spark_frost.udl
signer/spark-frost/protos/: common.proto  frost.proto
signer/spark-frost/src/: frost_test.rs  signing.rs
spark/: .golangci.yml  README.md  constant.go  go.mod  go.sum
spark-frost-signer/: .gitignore  Cargo.toml  build.rs
spark-frost-signer/proto/: frost.proto
spark-frost-signer/src/: dkg.rs  main.rs  proto.rs  server.rs  signing.rs
spark/common/: adaptor_signature.go  adaptor_signature_test.go  bitcoin.go  bitcoin_test.go  collections.go  connection.go  db_sesssion_middleware.go  keys.go  keys_test.go
spark/frost/: frost.go  frost_test.go
spark/proto/: dkg.pb.go  dkg_grpc.pb.go  frost.pb.go  frost.proto  frost_grpc.pb.go  spark.pb.go  spark_grpc.pb.go  spark_internal.pb.go  spark_internal_grpc.pb.go
spark/so/: README.md  config.go  operator.go
spark/test_util/: test_config.go  test_context.go  test_faucet.go  test_tree.go  test_tx.go
spark/wallet/: authn.go  (+16 more)
(+631 files in other folders)
