[package]
name = "spark-frost-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.3"
tonic = "0.12.3"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.16"
frost-secp256k1-tr = { git = "ssh://git@github.com/lightsparkdev/frost", branch = "spark-frost" }
frost-core = { git = "ssh://git@github.com/lightsparkdev/frost", branch = "spark-frost" }
rand = "0.8.5"
serde = "1.0.214"
hex = "0.4.3"
clap = { version = "4.5.20", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.12.3"
