[package]
name = "spark-frost"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }
frost-secp256k1-tr = { workspace = true }
frost-core = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
